# localrag

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
src/: chunking.py  cli.py  main.py  repo_extract.py  util.py
src/localrag/: chunking.py  main.py
src/localrag/tests/: test_repo_extract.py
src/tests/: test_repo_extract.py
